--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "react bootstrap init",
   "main": "index.js",
   "scripts": {
-    "test": "test",
+    "test:dev": "jest ./test/",
+    "test:prod": "npm test --notify --config=config.json",
     "build:dev": "webpack --mode development",
-    "build:prod": "webpack --mode production"
+    "build:prod": "webpack --mode production",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -19,20 +21,25 @@
   "author": "@roger",
   "license": "ISC",
   "dependencies": {
-    "@babel/preset-react": "^7.26.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "webpack-cli": "^6.0.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.26.3",
+    "@babel/preset-typescript": "^7.26.0",
     "@types/node": "^22.10.6",
+    "babel-jest": "^29.7.0",
     "babel-loader": "^9.2.1",
     "css-loader": "^7.1.2",
     "eslint": "^9.18.0",
+    "jest": "^29.7.0",
     "sass": "^1.83.1",
     "sass-loader": "^16.0.4",
     "ts-loader": "^9.5.2",
+    "ts-node": "^10.9.2",
     "typescript": "^5.7.3",
     "webpack": "^5.97.1"
   }
