--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,37 @@
-version: '3'
- services:
-  db:
-    image: mysql:5.6.34
+# version: '3'
+#  services:
+#   db:
+#     image: mysql:5.6.34
+#     ports:
+#       - "3306:3306"
+#     environment:
+#       MYSQL_ROOT_PASSWORD: root
+#   app:
+#     build: .
+#     environment:
+#       RAILS_ENV: development
+#     command: bundle exec rails s -p 3000 -b '0.0.0.0'
+#     volumes:
+#       - .:/pichat
+#     ports:
+#       - "3000:3000"
+#     depends_on:
+#       - db
+
+################################################################
+# Este archivo debe orquestar los servicios 
+# necesarios para tu aplicación 
+# (por ejemplo, el servicio frontend). Un ejemplo básico:
+################################################################
+
+version: '0.1'
+services:
+  frontend:
+    build: 
+      context: .
+      dockerfile: DockerFile
     ports:
-      - "3306:3306"
-    environment:
-      MYSQL_ROOT_PASSWORD: root
-  app:
-    build: .
-    environment:
-      RAILS_ENV: development
-    command: bundle exec rails s -p 3000 -b '0.0.0.0'
+      - "3000:80" # Mapping the port 80 of the container to the port 3000 en your machine
     volumes:
-      - .:/pichat
-    ports:
-      - "3000:3000"
-    depends_on:
-      - db
+      - ./build:/usr/share/nginx/html # Optional if you want to live development
+    container_name: react_frontend
